Barra de navegación administration

--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/fonts/style.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/assets/styles/scss"
+                "src/assets/styles/scss",
+                "src/assets/fonts/style.css"
               ]
             },
             "scripts": []
@@ -95,11 +97,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/fonts/style.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/assets/styles/scss"
+                "src/assets/styles/scss",
+                "src/assets/fonts/style.css"
               ]
             },
             "scripts": []
